Fix comment edit and reply form spacing

--- a/src/system/ui/style.scss
+++ b/src/system/ui/style.scss
@@ -1,4 +1,4 @@
-:root {
+.fl-asst {
 
 	// Known Colors
 	--fl-asst-red: #FF5335;
